--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -19,11 +19,8 @@ jobs:
 
     - name: Install Hurl
       run: |
-        sudo apt-get update
-        sudo apt-get install -y wget
-        echo "deb [trusted=yes] https://apt.fury.io/hurl/ /" | sudo tee /etc/apt/sources.list.d/hurl.list
-        sudo apt-get update
-        sudo apt-get install -y hurl
+        curl --location --remote-name https://github.com/Orange-OpenSource/hurl/releases/download/${{ env.HURL_VERSION }}/hurl_${{ env.HURL_VERSION }}_amd64.deb
+        sudo apt update && sudo apt install ./hurl_${{ env.HURL_VERSION }}_amd64.deb
 
     - name: Run Hurl tests
       run: |
