--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Run Hurl tests
       run: |
         mkdir -p ./results
-        hurl --test --report-html ./results/report.html text_translate_normal.hurl
+        hurl --very-verbose --continue-on-error --test --report-html report/ --variables-file uat.env text_translate_normal.hurl
 
     - name: Upload test results
       if: failure()
