--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -6,7 +6,7 @@ on:
       env:
         description: 'environment'
         required: true
-        default: ''
+        default: 'uat'
         type: choice
         options:
           - qa
@@ -42,7 +42,7 @@ jobs:
       uses: mathiasvr/command-output@v2.0.0
       id: run_test
       with:
-        run: hurl --very-verbose --test --variables-file live_translator/env/uat.env --max-time 60 live_translator/translate/text_translate/*.hurl
+        run: hurl --very-verbose --continue-on-error --test --variables-file live_translator/env/uat.env --max-time 60 live_translator/translate/text_translate/*.hurl
 
     - name: Upload test results
       if: failure()
