--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -53,7 +53,7 @@ jobs:
           DINGTALK_ACCESS_TOKEN: ${{ secrets.DINGTALK_ACCESS_TOKEN }}
         with:
           msgtype: actionCard
-          title: 'TestSuites Failure: project=${{ inputs.project }} env=${{ inputs.env }}'
+          title: '接口自动化TestSuites Failure: project=${{ inputs.project }} env=${{ inputs.env }}'
           text: |
             # 测试失败 by @${{ github.actor }}
             **项目**: ${{ inputs.project }}
@@ -73,7 +73,7 @@ jobs:
           DINGTALK_ACCESS_TOKEN: ${{ secrets.DINGTALK_ACCESS_TOKEN }}
         with:
           msgtype: actionCard
-          title: 'TestSuites Success: project=${{ inputs.project }} env=${{ inputs.env }}'
+          title: '接口自动化TestSuites Success: project=${{ inputs.project }} env=${{ inputs.env }}'
           text: |
             # 测试成功 by @${{ github.actor }}
             **项目**: ${{ inputs.project }}
