--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -43,12 +43,6 @@ jobs:
         run: |
           make -B ${{ inputs.project }} env=${{ inputs.env }} > hurl_report.txt
 
-      - name: Upload Hurl Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: hurl-report
-          path: hurl_report.txt
-
       - name: Notify on Failure
         if: failure()
         uses: leafney/dingtalk-action@v1
@@ -65,6 +59,7 @@ jobs:
             </ul>
             <p><strong>错误日志</strong>:</p>
             <pre>${{ steps.run_test.outputs.stderr }}</pre>
+            <p><a href="https://github.com/${{ github.repository }}/blob/main/live_translator/report/index.html">查看 Hurl 报告</a></p>
           single_title: '查看详情'
           single_url: 'dingtalk://dingtalkclient/page/link?url=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
 
@@ -82,5 +77,6 @@ jobs:
               <li><strong>项目</strong>: ${{ inputs.project }}</li>
               <li><strong>环境</strong>: ${{ inputs.env }}</li>
             </ul>
+            <p><a href="https://github.com/${{ github.repository }}/blob/main/live_translator/report/index.html">查看 Hurl 报告</a></p>
           single_title: '查看详情'
           single_url: 'dingtalk://dingtalkclient/page/link?url=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
