--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -42,6 +42,12 @@ jobs:
       - name: Run Hurl tests
         run: |
           make -B ${{ inputs.project }} env=${{ inputs.env }}
+          
+      - name: Upload Hurl Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: hurl-report
+          path: live_translator/report/
 
       - name: Notify on Failure
         if: failure()
