--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -36,10 +36,16 @@ jobs:
         run: |
           curl --location --remote-name https://github.com/Orange-OpenSource/hurl/releases/download/${{ env.HURL_VERSION }}/hurl_${{ env.HURL_VERSION }}_amd64.deb
           sudo apt update && sudo apt install ./hurl_${{ env.HURL_VERSION }}_amd64.deb
+          
+      - name: Create Report Directory
+        run: mkdir -p live_translator/report/
 
       - name: Run Hurl tests
         run: |
           make -B ${{ inputs.project }} env=${{ inputs.env }}
+
+      - name: List Report Directory
+        run: ls -l live_translator/report/
           
       - name: Upload Hurl Report
         uses: actions/upload-artifact@v3
