--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -40,10 +40,7 @@ jobs:
       - name: Run Hurl tests
         id: run_test  # 添加步骤 ID
         run: |
-          make -B ${{ inputs.project }} env=${{ inputs.env }} > result.log 2> error.log
-          echo "stderr<<EOF" >> $GITHUB_ENV  # 使用 GITHUB_ENV 设置环境变量
-          cat error.log >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          make -B ${{ inputs.project }} env=${{ inputs.env }}
 
       - name: Upload Hurl Report
         uses: actions/upload-artifact@v3
@@ -66,7 +63,6 @@ jobs:
               <li><strong>环境</strong>: ${{ inputs.env }}</li>
             </ul>
             <p><strong>错误日志</strong>:</p>
-            <pre>${{ env.stderr }}</pre>  # 使用环境变量引用 stderr
           single_title: '查看详情'
           single_url: 'dingtalk://dingtalkclient/page/link?url=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
 
