--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -57,7 +57,7 @@ jobs:
           msgtype: actionCard
           title: 'TestSuites Failure: project=${{ inputs.project }} env=${{ inputs.env }}'
           text: |
-            <h4>TestSuites Failure by @${{ github.actor }}</h3>
+            <h4 style="color:blue;">TestSuites Failure by @${{ github.actor }}</h3>
             <ul>
               <li><strong>项目</strong>: ${{ inputs.project }}</li>
               <li><strong>环境</strong>: ${{ inputs.env }}</li>
