--- a/.github/workflows/hurl_testcases.yml
+++ b/.github/workflows/hurl_testcases.yml
@@ -11,7 +11,8 @@ on:
         options:
           - qa
           - uat
-          - production
+          - pro
+          - mock
       project:
         description: 'project'
         required: true
